# api-misuse-finder

./: README.md  pyproject.toml
api_finder/: __init__.py  cli.py  output.py  rules.py  scanner.py
default_rules/: javascript.yaml  python.yaml
tests/: test_rules.py
